--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngrx-store-ionic-storage",
-  "version": "4.2.0",
+  "name": "@edcarroll/ngrx-store-ionic-storage",
+  "version": "5.0.0",
   "description": "Simple storage syncing between @ngrx/store and @ionic/storage.",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -29,22 +29,22 @@
     "dist"
   ],
   "devDependencies": {
-    "@angular/compiler": "5.0.5",
-    "@angular/compiler-cli": "5.0.5",
-    "@angular/core": "5.0.5",
-    "@ionic/storage": "2.1.3",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@ionic/storage": "^2.1.3",
+    "@ngrx/effects": "^6.0.0",
+    "@ngrx/store": "^6.0.0",
     "rimraf": "latest",
-    "rxjs": "^5.5.2",
-    "typescript": "2.4.2",
-    "zone.js": "0.8.18"
+    "rxjs": "^6.0.0",
+    "typescript": "^2.7.0",
+    "zone.js": "^0.8.18"
   },
   "peerDependencies": {
-    "@angular/core": "^2.4.8 || ^4.0.0 || ^5.0.0",
+    "@angular/core": ">=6.0.0",
     "@ionic/storage": "^2.0.1",
-    "@ngrx/effects": "^4.1.1",
-    "@ngrx/store": "^4.1.1",
-    "rxjs": "^5.5.2"
+    "@ngrx/effects": ">=6.0.0",
+    "@ngrx/store": ">=6.0.0",
+    "rxjs": ">=6.0.0"
   }
 }
